# rules_js-primevue-reproduction

./: .bazelignore  .gitignore  .npmrc  BUILD.bazel  MODULE.bazel  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
bazel/: modules.bzl
example/: BUILD.bazel  index.html  package.json  vite.config.mjs
example/src/: App.vue  main.js
